--- a/AI - Project (Part I)/nbproject/project.properties
+++ b/AI - Project (Part I)/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=project.Ajedrez
+main.class=project.Chess
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
